# 2tox

./: .travis.yml  CMakeLists.txt  README.md
.travis/linux/: before_install.sh
cmake/: FindSodium.cmake  GTest.cmake  uninstall.cmake.in
tests/: CMakeLists.txt  RegisterTests.cmake
tests/toxcore/: test_crypto_core.cpp  test_network.cpp
tests/toxencryptsave/: test_encryptsave.cpp
toxcore/: CMakeLists.txt  crypto_core.cpp  crypto_core.hpp  network.cpp  network.hpp
toxencryptsave/: CMakeLists.txt  constants.cpp  constants.hpp  data_description.hpp  error_status.hpp  key.cpp  key.hpp  mem_guard.cpp  mem_guard.hpp  reader.cpp  reader.hpp  toxencryptsave.cpp  toxencryptsave.hpp  writer.cpp  writer.hpp
